--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -17,7 +17,7 @@ body {
   // background-size: 16px 16px;
   // 2. Variante:
   // background-image: url('https://picsum.photos/id/124/3504/2336');
-  background-image: url('/img/bg_130_2000xH_sw.jpg');
+  background-image: url('/img/bg_130_2000x4038_sw.jpg');
   // background-image: url('/img/logo_vorlage.jpg');
   // opacity: 0.8;
   background-repeat: repeat repeat;
