--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -5,6 +5,19 @@
   text-align: center;
   padding: 0;
 
+  .container-fluid,
+  .navbar {
+    background: var(--link-color);
+  }
+
+  navbar-dark .navbar-brand {
+    background-color: var(--hover-color);
+  }
+
+  .dropdown-menu {
+    background-color: var(--hover-color);
+  }
+
   a {
     font-size: 1.2rem;
     font-weight: 900;
@@ -25,3 +38,39 @@
     }
   }
 }
+
+/* ============ desktop view ============ */
+@media (min-width: 992px) {
+  .dropdown-menu li {
+    position: relative;
+  }
+  .dropdown-menu .submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+  }
+  .dropdown-menu .submenu-left {
+    right: 100%;
+    left: auto;
+  }
+
+  .dropdown-menu > li:hover {
+    background-color: var(--hover-color);
+  }
+  .dropdown-menu > li:hover > .submenu {
+    display: block;
+  }
+}
+
+/* ============ desktop view .end// ============ */
+
+/* ============ small devices ============ */
+@media (max-width: 991px) {
+  .dropdown-menu .dropdown-menu {
+    margin-left: 0.7rem;
+    margin-right: 0.7rem;
+    margin-bottom: 0.5rem;
+  }
+}
+/* ============ small devices .end// ============ */
