--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -14,4 +14,37 @@
   //   radial-gradient(var(--bg-black-fog) 15%, transparent 20%) 8px 9px;
   // background-size: 16px 16px;
   background-color: var(--bg-color);
+
+  button {
+    padding: 0.5em;
+    border-radius: 0.5em;
+    font-size: 1.2rem;
+    -webkit-text-stroke: 0.15rem var(--bg-black);
+    background-color: var(--hover-color);
+    color: var(--bg-black);
+    border: none;
+    box-shadow: none;
+    &[disabled] {
+      background: var(--bg-color);
+    }
+    &:hover,
+    &:focus {
+      background-color: var(--light-bg-color);
+    }
+
+    button,
+    [type='button'],
+    [type='reset'],
+    [type='submit'] {
+      -webkit-appearance: none;
+      background-color: transparent;
+      border: none;
+      text-decoration: none;
+      outline: none;
+    }
+
+    button:not(:disabled) {
+      cursor: pointer;
+    }
+  }
 }
