--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,24 +1,34 @@
-.site-navigation {
+.site-navigation,
+.topnav {
   width: 100%;
   min-height: 2rem;
+  position: relative;
+  overflow: hidden;
+  display: block;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   background: var(--link-color);
   text-align: center;
-  padding: 0;
 
-  .container-fluid,
-  .navbar {
-    background: var(--link-color);
+  ul {
+    display: block;
+    list-style-type: none;
+    margin: 0;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
   }
 
-  navbar-dark .navbar-brand {
-    background-color: var(--hover-color);
+  li {
+    display: list-item;
+    text-align: -webkit-match-parent;
   }
 
-  .dropdown-menu {
-    background-color: var(--hover-color);
-  }
-
-  a {
+  a,
+  .icon {
     font-size: 1.2rem;
     font-weight: 900;
     color: var(--bg-black);
@@ -32,45 +42,78 @@
       justify-content: space-between;
     }
     &:hover,
-    &:focus {
+    &:focus,
+    &:active {
       background-color: var(--hover-color);
       color: var(--bg-black);
     }
   }
 }
 
+.topnav .icon {
+  display: none;
+}
+
 /* ============ desktop view ============ */
 @media (min-width: 992px) {
-  .dropdown-menu li {
-    position: relative;
-  }
-  .dropdown-menu .submenu {
-    display: none;
-    position: absolute;
-    left: 100%;
-    top: -7px;
-  }
-  .dropdown-menu .submenu-left {
-    right: 100%;
-    left: auto;
-  }
-
-  .dropdown-menu > li:hover {
-    background-color: var(--hover-color);
-  }
-  .dropdown-menu > li:hover > .submenu {
-    display: block;
-  }
 }
 
 /* ============ desktop view .end// ============ */
 
 /* ============ small devices ============ */
 @media (max-width: 991px) {
-  .dropdown-menu .dropdown-menu {
-    margin-left: 0.7rem;
-    margin-right: 0.7rem;
-    margin-bottom: 0.5rem;
+  #myTopnav {
+    position: relative;
+    width: 100%;
+  }
+
+  .topnav {
+    background: var(--link-color);
+    position: relative;
+    left: 0;
+    z-index: 3;
+  }
+
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav .icon {
+    display: block;
+    background-color: var(--hover-color);
+    float: right;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    position: relative;
+    top: 0;
+  }
+
+  .active {
+    position: relative;
+    float: left;
+    top: 0;
+  }
+
+  .topnav a.active {
+    position: relative;
+    top: 0px;
+    background: var(--link-color);
+  }
+
+  .topnav a:hover {
+    background-color: var(--hover-color);
+    color: var(--bg-black);
   }
 }
+
 /* ============ small devices .end// ============ */
