--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -57,4 +57,5 @@ $creme-orig: hsl(60, 31%, 69%);
   --logo-color: #{$nearly-black};
   --input-color: #{$nearly-white};
   --light-bg-color: #{$creme};
+  --district-color: #{$green};
 }
