--- a/sass/components/_bad.scss
+++ b/sass/components/_bad.scss
@@ -26,7 +26,7 @@
 
   // &:not(:last-child) {
   padding-bottom: 1.5rem;
-  border-bottom: 2px dashed var(--hover-color);
+  border-bottom: 0.1rem dashed var(--hover-color);
   // }
 }
 
