--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -3,7 +3,7 @@
 @import 'components/main';
 @import 'components/footer';
 @import 'components/bad';
-@import 'components/table';
+@import 'components/form-elements';
 @import 'components/images';
 @import 'components/plzfinder';
 @import 'components/fun-stuff';
